--- a/lab7/report/10-analysis.tex
+++ b/lab7/report/10-analysis.tex
@@ -29,7 +29,7 @@
 
 Сегментированный словарь позволяет уменьшить количество сравнений, необходимых для поиска в словаре. Однако он требует предобработки произвольного словаря для превращения его в сегментированный, а также дополнительной памяти под такую организацию. Объем дополнительной памяти определяется количеством выделяемых сегментов и подсегментов.
 
-Также из-за необходимости поддержания структуры словаря усложняется операция добавления в словарь новых элементов. Необходимо определить, к какому сегменту относится новый ключ, если сегмент разбит на подсегменты -- соответсвующий подсегмент, а затем найти позицию внутри сегмента, в которую этот ключ необходимо вставить для сохранения упорядоченности. Также после добавления нового ключа сегмент становится больше, поэтому необходимо проверить упорядоченность сегментов по частотной характеристике и пересортировать их в случае необходимости. 
+Также из-за необходимости поддержания структуры словаря усложняется операция добавления в словарь новых элементов. Необходимо определить, к какому сегменту относится новый ключ, если сегмент разбит на подсегменты -- соответсвующий подсегмент, а затем найти позицию внутри сегмента (подсегмента), в которую этот ключ необходимо вставить для сохранения упорядоченности. Также после добавления нового ключа сегмент (подсегмент) становится больше, поэтому необходимо проверить упорядоченность сегментов (подсегментов) по частотной характеристике и пересортировать их в случае необходимости. 
 
 \section{Вывод из аналитической части}
 Были рассмотрены идеи и материалы, необходимые для  разработки и реализации трех алгоритмов поиска в словаре: алгоритма полного перебора, алгоритма бинарного поиска и алгоритма поиска в сегментированном словаре. 
