--- a/lab7/report/20-design.tex
+++ b/lab7/report/20-design.tex
@@ -1,11 +1,12 @@
 \chapter{Конструкторская часть}
 
-В данном разделе будут приведены структура используемого словаря и схемы рассмотренных в предыдущем разделе алгоритмов поиска в словаре.
+В данном разделе будут приведены структура используемого словаря и схемы рассмотренных в предыдущем разделе алгоритмов поиска в словаре. Во всех алгоритмах возвращаемое значение -1 означает, что заданного ключа нет в словаре. 
 
 \section{Структура импользуемого словаря}
 Словарь состоит из пар вида <en - rus>, где en - слово на английском языке, rus - его перевод на русский.
 
 \section{Схема алгоритма полного перебора}
+
 
 
 На рисунке \ref{fig:full_search} приведена cхема алгоритма полного перебора поиска в словаре.
@@ -29,7 +30,7 @@
 
 \begin{figure}[h!]
 	
-	\centering{\includegraphics[scale=0.65]{inc/img/binary_search.png}}
+	\centering{\includegraphics[scale=0.66]{inc/img/binary_search.png}}
 	
 	\caption{Схема алгоритма бинарного поиска}
 	
