--- a/lab7/report/50-conclusion.tex
+++ b/lab7/report/50-conclusion.tex
@@ -1,17 +1,17 @@
 \chapter*{Заключение}
 \addcontentsline{toc}{chapter}{Заключение}
 
-В результате выполнения лабораторной работы была достигнута поставленная цель: был реализован муравьиный алгоритм для решения задачи коммивояжера и приобретены навыки параметризации алгоритмов.
+В результате выполнения лабораторной работы была достигнута поставленная цель: был реализован эффективный алгоритм поиска по словаре.
 
 
-В рамках выполнения работы были выаолнены следующие задачи: 
+В рамках выполнения работы были решены следующие задачи: 
 \begin{enumerate}[label={\arabic*)}]
-	\item реализован алгоритм полного перебора для решения задачи коммивояжера;
-	\item изучен и реализован муравьиный алгоритм для решения задачи коммивояжера;
-	\item проведена параметризаця муравьиного алгоритма на трех классах данных и подобраны оптимальные параметры;
-	\item проведен сравнительный анализ времени выполнения и трудоемкостей реализаций.
-
-
+	\item изучены три алгоритма поиска в словаре: алгоритм полного перебора, алгоритм бинарного поиска и алгоритм поиска в сегментированном словаре;
+	\item разработаны и реализованы изученные алгоритмы;
+	\item проведен сравнительный анализ трудоёмкости реализаций алгоритмов на основе теоретических расчетов (в среднем; в лучшем и худшем случаях);
+	\item проведен сравнительный анализ процессорного времени выполнения реализаций алгоритмов на основе экспериментальных данных;
+	\item проведен сравнительный анализ количества сравнений с заданным ключом, необходимых для поиска каждым алгоритмом значения по ключу и для определения отсутствия заданного ключа в словаре.
+	
 \end{enumerate}
 
 
