--- a/lab7/report/20-design.tex
+++ b/lab7/report/20-design.tex
@@ -2,7 +2,7 @@
 
 В данном разделе будут приведены структура используемого словаря и схемы рассмотренных в предыдущем разделе алгоритмов поиска в словаре. Во всех алгоритмах возвращаемое значение -1 означает, что заданного ключа нет в словаре. 
 
-\section{Структура импользуемого словаря}
+\section{Структура используемого словаря}
 Словарь состоит из пар вида <en - rus>, где en - слово на английском языке, rus - его перевод на русский.
 
 \section{Схема алгоритма полного перебора}
