--- a/lab7/report/30-impl.tex
+++ b/lab7/report/30-impl.tex
@@ -99,6 +99,7 @@ def segment_search(my_dict, key):
 
 \begin{table}[h!]
 	\begin{center}
+		\caption{\label{tab:test_rec} Функциональные тесты}
 		\begin{tabular}{|c | c | c | c |}
 			\hline
 			Ключ & Словарь & Ожидание & Результат \\
@@ -109,11 +110,10 @@ def segment_search(my_dict, key):
 			\hline
 		\end{tabular}
 	\end{center}
-	\caption{\label{tab:test_rec} Функциональные тесты.}
-\end{table}
+	\end{table}
 
 
 
-\section*{Вывод}
+\section{Вывод из технологического раздела}
 
 Был производен выбор средств реализации, приведены требования к ПО, реализованы и протестированы алгоритмы поиска в словаре.
