--- a/lab7/report/40-research.tex
+++ b/lab7/report/40-research.tex
@@ -88,12 +88,13 @@
 
 
 
-Таким образом, в общем случае наибольшее количество сравнений требуется в алгоритме полного перебора. Соотношение количества сравнений в бинарном поиске и поиске в сегментированном словаре определяется размером словаря и количеством и размерами сегментов в сегментированном словаре.
+Таким образом, в общем случае наибольшее количество сравнений требуется в алгоритме полного перебора. Соотношение среднего, медианного и максимального количества сравнений в бинарном поиске и поиске в сегментированном словаре определяется размером словаря и количеством и размерами сегментов в сегментированном словаре.
 
 \clearpage
 \section{Сравнение трудоемкостей}
 
-Рассмотрим трудоемкости реализаций при словаре с N ключами.
+Рассмотрим трудоемкости реализаций при словаре с N ключами. Трудоемкость дается по количеству сравнений, которое потребовалось алгоритму для решения задачи.
+%??? тут надо сказать про колво сравнений, по которым дана оценка
 
 \begin{itemize}
 	\item Поиск полным перебором
@@ -118,9 +119,9 @@
 		%\end{aligned}
 	%\end{equation}
 		
-		\item Лучший случай - когда ключ стоит на первой позиции в словаре, и тогда придется сравнить искомый ключ только один раз, а трудоемскость составит O(1).
+		\item Лучший случай - когда ключ стоит на первой позиции в словаре или отсутствует в нем. Тогда придется сравнить искомый ключ только один раз, а трудоемскость составит O(1).
 		
-		\item Худший случай - когда ключ стоит на последней позиции в словаре, и тогда придется сравнить искомый ключ с каждым ключом словаря, а трудоемскость составит O(n).
+		\item Худший случай - когда ключ стоит на последней позиции в словаре, и тогда придется сравнить искомый ключ с каждым ключом словаря, а трудоемкость составит O(n).
 		
 		\item Добавлять новый элемент в словарь можно на любую позицию, трудоемкость добваления O(1).
 
@@ -133,7 +134,7 @@
 	
 	\item Лучший случай - когда ключ стоит на серединной позиции в словаре, и тогда придется сравнить искомый ключ только один раз, а трудоемскость составит O(1).
 	
-	\item Худший случай - когда ключ стоит на такой позиции, что исходный словарь придется разбивать на части вплоть до того момента, когда левая и правая границы поиска совпадут. Тогда придется сравнить искомый ключ с каждым ключом словаря $2*\log{(N+1)} - 1$ раз и трудоемскость составит $O(\log{N})$.
+	\item Первый худший случай - когда ключ стоит на такой позиции, что исходный словарь придется разбивать на части вплоть до того момента, когда левая и правая границы поиска совпадут. Тогда придется сравнить искомый ключ с каждым ключом словаря $2*\log{(N+1)} - 1$ раз и трудоемскость составит $O(\log{N})$. Вторым худшим случаем с той же трудоемкостью является ситуация, когда ключ отсутсвует в словаре.
 	
 	\item Добавлять новый элемент в словарь нужно так, чтобы он остался отсортированным, трудоемкость добваления в худшем случае O(N).
 	\end{itemize}
@@ -141,16 +142,18 @@
 
 	\item Поиск в сегментированном словаре
 	\begin{itemize}
-		\item Трудоемкость в среднем при множестве всех возможных случаев $\Omega$  (при учете, что в английском алфавите 26 букв) может быть рассчитана по формуле (\ref{for:anal}). 
+		\item Трудоемкость в среднем при множестве всех возможных случаев $\Omega$ может быть рассчитана по формуле (\ref{for:anal}). 
 		\begin{equation}
 			\label{for:anal}
-			\sum_{i \in \Omega}{\left(f_{\text{выбор сегмента i-ого эл.}} + f_{\text{бинарный поиск i-ого эл.}}\right)} \cdot p_i \\ \sim 13 + \log{N}
+			\sum_{i \in \Omega}{\left(f_{\text{выбор сегмента i-ого эл.}} + f_{\text{бинарный поиск i-ого эл.}}\right)} \cdot p_i \\ \sim i + \log{n_i},
 		\end{equation} 
 	%$O(\log{N})$~\cite{second_article}.
-		
+		где $n_i$ - количество элементов в i-ом сегменте
 		\item Лучший случай - когда ключ стоит на первой позиции в самом большом сегменте словаря, и тогда придется сравнить искомый ключ только 2 раза, а трудоемскость составит O(1).
 		
-		\item Худший случай сильно зависит от того, как распределятся ключи по сегментам словаря -- насколько далеко от начала окажется нужный сегмент и насколько <<неудачной>> для бинарного поиска окажется позиция ключа в этом сегменте. 
+		\item Худший случай сильно зависит от того, как распределятся ключи по сегментам словаря -- насколько далеко от начала окажется нужный сегмент и насколько <<неудачной>> для бинарного поиска окажется позиция ключа в этом сегменте. Таковым может оказаться, например, ключ на <<неудачной>> позиции в самом большом сегменте или единственный ключ из самого маленького сегмента. 
+	
+		\item Для определения того, что заданный ключ отсутсвтует в словаре, в случае поиска в сегментирванном словаре возможны два варианта. Если в словаре нет ключей, которые начинаются на ту же букву, что и искомый ключ, то понадобится столько сравнений, сколько сегментов в словаре и трудоемкость составит N. Если же такие ключи есть, то к количеству сравний, которое потребовалось для поиска нужного сегмента, нужно добавить количество сравнений, которое потребуется бинарному поиску для определения отсутсвия ключа в пределах сегмента и трудоемкость составит $i + \log{n_i}$, где i-номер сегмента, начинающегося на ту же букву, $n_i$ - количество элементов в этом сегменте.
 		
 		\item Добавлять новый элемент в словарь нужно так, чтобы его сегменты остались отсортированы по размеру, а сегмент, в который попадет добавляемый ключ -- по лексикографическому порядку.
 	\end{itemize}
