--- a/lab7/report/40-research.tex
+++ b/lab7/report/40-research.tex
@@ -53,22 +53,22 @@
 
 Для определения того, что заданный ключ отсутсвтует в словаре, в случае поиска в сегментирванном словаре возможны два варианта. Если в словаре нет ключей, которые начинаются на ту же букву, что и искомый ключ, то понадобится столько сравнений, сколько сегментов в словаре. Если же такие ключи есть, то к количеству сравний, которое потребовалось для поиска нужного сегмента, нужно добавить количество сравнений, которое потребуется бинарному поиску для определения отсутсвия ключа в пределах сегмента.
 
-Также для полноты картины на рисунках \ref{img:full2_k}-\ref{img:segment2_kg} приведены гистограммы, построенные для тех же алгоритмов по тому же принципу, но при словаре из 10000 элементов. 
+Также для полноты картины на рисунках \ref{img:full2_k}-\ref{img:segment2_kg} приведены гистограммы, построенные для тех же алгоритмов по тому же принципу, но при словаре из 4100 элементов. 
 
 \clearpage
-\img{190mm}{full2_k}{Количество сравнений: полный перебор, сортировка по расположению, словарь из 10000 элементов}
-\img{190mm}{full2_kg}{Количество сравнений: полный перебор, сортировка по сравнениям, словарь из 10000 элементов}
+\img{190mm}{full2_k}{Количество сравнений: полный перебор, сортировка по расположению, большой словарь}
+\img{190mm}{full2_kg}{Количество сравнений: полный перебор, сортировка по сравнениям, большой словарь}
 
 \clearpage
-\img{190mm}{binary2_k}{Количество сравнений: бинарный поиск, сортировка по расположению, словарь из 10000 элементов}
-\img{190mm}{binary2_kg}{Количество сравнений: бинарный поиск, сортировка по сравнениям, словарь из 10000 элементов}
+\img{190mm}{binary2_k}{Количество сравнений: бинарный поиск, сортировка по расположению, большой словарь}
+\img{190mm}{binary2_kg}{Количество сравнений: бинарный поиск, сортировка по сравнениям, большой словарь}
 
 \clearpage
-\img{190mm}{segment2_k}{Количество сравнений: поиск в сегментированном словаре, сортировка по расположению, словарь из 10000 элементов}
-\img{190mm}{segment2_kg}{Количество сравнений: поиск в сегментированном словаре, сортировка по сравнениям, словарь из 10000 элементов}
+\img{190mm}{segment2_k}{Количество сравнений: поиск в сегментированном словаре, сортировка по расположению, большой словарь}
+\img{190mm}{segment2_kg}{Количество сравнений: поиск в сегментированном словаре, сортировка по сравнениям, большой словарь}
 
 \clearpage
-В таблице ~\ref{tab:cmp} приведены значения минимального (min), среднего (mean), медианного (median) и максимального (max) количества сравнений, которые потребовались рассатриваемым реализациям при поиске всех ключей в словаре из 10000 элементов. В таблице введены следующие обозначения алгоритмов: full - поиск полным перебором, binary - бинарный поиск, segment - поиск в сегментированном словаре.
+В таблице ~\ref{tab:cmp} приведены значения минимального (min), среднего (mean), медианного (median) и максимального (max) количества сравнений, которые потребовались рассатриваемым реализациям при поиске всех ключей в словаре из 4100 элементов. В таблице введены следующие обозначения алгоритмов: full - поиск полным перебором, binary - бинарный поиск, segment - поиск в сегментированном словаре.
 
 \begin{table}[h!]
 	\begin{center}
@@ -77,9 +77,9 @@
 			 & full & binary & segment \\
 			\hline
 			min & 1 & 1 & 2 \\
-			mean & 5000.5 & 23.7262 & 21.6744 \\
-			median & 5000 & 25 & 22 \\
-			max & 10000 & 27 & 29 \\
+			mean & 2050.5 & 21.2 & 21.02 \\
+			median & 2050 & 23 & 22 \\
+			max & 4100 & 25 & 25 \\
 			\hline
 		\end{tabular}
 	\end{center}
@@ -145,10 +145,14 @@
 		\item Трудоемкость в среднем при множестве всех возможных случаев $\Omega$ может быть рассчитана по формуле (\ref{for:anal}). 
 		\begin{equation}
 			\label{for:anal}
-			\sum_{i \in \Omega}{\left(f_{\text{выбор сегмента i-ого эл.}} + f_{\text{бинарный поиск i-ого эл.}}\right)} \cdot p_i \\ \sim i + \log{n_i},
+			\sum_{i \in \Omega}{\left(f_{\text{выбор сегмента i-ого эл.}} + f_{\text{бинарный поиск i-ого эл.}}\right)} \cdot p_i \\ \sim \sum_{i \in \Omega} (i + \log{n_i}),
 		\end{equation} 
 	%$O(\log{N})$~\cite{second_article}.
-		где $n_i$ - количество элементов в i-ом сегменте
+		где $n_i$ - количество элементов в i-ом сегменте.
+		Например, для словаря из 17000 элементов, структура и процесс расчетов в котором приведены на рисунке \ref{img:example}, средняя трудоемкость в количестве сравнений составляет 17.5.
+		\clearpage
+		\img{170mm}{example}{Пример расчета трудоемкости поиска в сегментированном словаре}
+		
 		\item Лучший случай - когда ключ стоит на первой позиции в самом большом сегменте словаря, и тогда придется сравнить искомый ключ только 2 раза, а трудоемскость составит O(1).
 		
 		\item Худший случай сильно зависит от того, как распределятся ключи по сегментам словаря -- насколько далеко от начала окажется нужный сегмент и насколько <<неудачной>> для бинарного поиска окажется позиция ключа в этом сегменте. Таковым может оказаться, например, ключ на <<неудачной>> позиции в самом большом сегменте или единственный ключ из самого маленького сегмента. 
